# mesh-proxy

./: .gitignore  Cargo.toml  README.md  README.zhs.md  justfile  lefthook.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/mesh-cli/: Cargo.toml
crates/mesh-cli/i18n/en/: mesh-proxy.ftl
crates/mesh-cli/i18n/zh-CN/: mesh-proxy.ftl
crates/mesh-cli/src/: main.rs
crates/mesh-cli/src/help_i18n/: locale.rs  mod.rs  render.rs
crates/mesh-core/: Cargo.toml
crates/mesh-core/src/: config_watcher.rs  connection_pool.rs  control_node.rs  daemon.rs  edge_node.rs  edge_registration.rs  frame.rs  health_prober.rs  health_server.rs  ipc_server.rs  lib.rs  mesh_node.rs  persistence.rs  port_allocator.rs  process.rs
crates/mesh-core/tests/: control_expose.rs  integration_basic.rs  invite_flow.rs  phase3_integration.rs  phase3_proptest.rs  phase4_integration.rs  phase5_integration.rs  phase6_registration.rs  smoke_control_flow.rs
crates/mesh-proto/: Cargo.toml
crates/mesh-proto/src/: config.rs  health.rs  invite.rs  ipc.rs  lib.rs  listener.rs  message.rs  proxy.rs  service.rs  ticket.rs  validate.rs
scripts/hooks/: review-check.sh
skills/mesh-proxy/: SKILL.md
