[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/RyderFreeman4Logos/mesh-proxy"

[workspace.dependencies]
# Internal crates
mesh-proto = { path = "crates/mesh-proto" }
mesh-core = { path = "crates/mesh-core" }

# P2P networking
iroh = "0.97"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System / platform
dirs-next = "2"
hostname = "0.4"
libc = "0.2"

# Encoding
bs58 = "0.5"

# Config file
toml = "0.8"
