[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/RyderFreeman4Logos/mesh-proxy"

[workspace.dependencies]
# Internal crates
mesh-proto = { path = "crates/mesh-proto" }
mesh-core = { path = "crates/mesh-core" }

# P2P networking
iroh = "0.97"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File watching / config reload
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# HTTP health checks
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System / platform
dirs-next = "2"
hostname = "0.4"
libc = "0.2"

# Encoding
bs58 = "0.5"

# Config file
toml = "0.8"
