[package]
name = "mesh-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mesh-proxy"
path = "src/main.rs"

[dependencies]
mesh-proto.workspace = true
mesh-core.workspace = true
iroh.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
toml_edit.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }"
