[package]
name = "mesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-proto.workspace = true
iroh.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
libc.workspace = true
bs58.workspace = true
