[package]
name = "mesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-proto.workspace = true
iroh.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
libc.workspace = true
bs58.workspace = true

[dev-dependencies]
tempfile = "3"
proptest = { version = "=1.10.0", default-features = false, features = ["std", "bit-set"] }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
iroh.workspace = true
rand = "0.8"
