[package]
name = "mesh-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bs58.workspace = true
dirs-next.workspace = true
hostname.workspace = true
toml.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
